--- a/src/modified.html
+++ b/src/modified.html
@@ -66,11 +66,11 @@
                 clearInterval(this.interval);
             }
 
-            timeStyle(h,m,s){
+            timeStyle(h, m, s) {
                 h = (h < 10) ? '0' + h : h;
                 m = (m < 10) ? '0' + m : m;
-                s = (s < 10) ? '0' + s : s; 
-                return {h,m,s}
+                s = (s < 10) ? '0' + s : s;
+                return { h, m, s }
             }
 
             secondsToString() {
@@ -84,15 +84,13 @@
                 var m = Math.floor((seconds / 10) % 10);
                 var s = seconds % 10;
                 //Style
-                var data1 = this.timeStyle(hour,minute,second)
-                var data2 = this.timeStyle(h,m,s)
+                var data1 = this.timeStyle(hour, minute, second)
+                var data2 = this.timeStyle(h, m, s)
                 this.setState(state => ({
                     time: data1.h + ':' + data1.m + ':' + data1.s,
                     faster: data2.h + ':' + data2.m + ':' + data2.s
                 }))
             }
-
-            scaleConverter() { }
 
             render() {
                 return (
@@ -128,7 +126,7 @@
                                 value={this.state.text}
                             />
                             <button>
-                                Add #{this.state.items.length + 1}
+                                Add Task {String.fromCharCode(this.state.items.length + 65)}
                             </button>
                         </form>
                     </div>
@@ -141,12 +139,14 @@
 
             handleSubmit(e) {
                 e.preventDefault();
+                var id = String.fromCharCode(this.state.items.length + 65);
                 if (this.state.text.length === 0) {
                     return;
                 }
                 const newItem = {
                     text: this.state.text,
-                    id: Date.now()
+                    id: id,
+                    uid: Date.now()
                 };
                 this.setState(state => ({
                     items: state.items.concat(newItem),
@@ -158,11 +158,13 @@
         class TodoList extends React.Component {
             render() {
                 return (
-                    <ul>
-                        {this.props.items.map(item => (
-                            <li key={item.id}>{item.text}</li>
-                        ))}
-                    </ul>
+                    <div>
+                        {
+                            this.props.items.map(item => (
+                                <h6 key={item.uid}>{item.id + ". " + item.text}</h6>
+                            ))
+                        }
+                    </div>
                 );
             }
         }
