--- a/src/modified.html
+++ b/src/modified.html
@@ -17,18 +17,43 @@
     </style>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.js"></script>    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.js"></script>   
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Modification 1</h1>
-    <div id="hello-example"></div>
-    <h1>Modification 2</h1>
-    <div id="timer-example"></div>
-    <h1>Modification 3</h1>
-    <div id="todos-example"></div>
-    <h1>Modification 4</h1>
-    <div id="markdown-example"></div>
+
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="modification1-tab" data-bs-toggle="tab" data-bs-target="#modification1" type="button" role="tab" aria-controls="modification1" aria-selected="true">Modification 1</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="modification2-tab" data-bs-toggle="tab" data-bs-target="#modification2" type="button" role="tab" aria-controls="modification2" aria-selected="false">Modification 2</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="modification3-tab" data-bs-toggle="tab" data-bs-target="#modification3" type="button" role="tab" aria-controls="modification3" aria-selected="false">Modification 3</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="modification4-tab" data-bs-toggle="tab" data-bs-target="#modification4" type="button" role="tab" aria-controls="modification4" aria-selected="false">Modification 4</button>
+        </li>
+      </ul>
+
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="modification1" role="tabpanel" aria-labelledby="modification1-tab">
+            <div id="hello-example"></div>
+        </div>
+        <div class="tab-pane fade" id="modification2" role="tabpanel" aria-labelledby="modification2-tab">
+            <div id="timer-example"></div>
+        </div>
+        <div class="tab-pane fade" id="modification3" role="tabpanel" aria-labelledby="modification3-tab">
+            <div id="todos-example"></div>
+        </div>
+        <div class="tab-pane fade" id="modification4" role="tabpanel" aria-labelledby="modification4-tab">
+            <div id="markdown-example"></div>
+        </div>
+      </div>
 
     <script type="text/babel">
 
@@ -174,7 +199,7 @@
                 super(props);
                 this.md = new Remarkable({html:true});
                 this.handleChange = this.handleChange.bind(this);
-                this.state = { value: 'Hello, **world**!' };
+                this.state = { value: 'Hello, <b>world</b>!' };
             }
 
             handleChange(e) {
